--- a/CoinTracker/CoinTracker/Resources/Info.plist
+++ b/CoinTracker/CoinTracker/Resources/Info.plist
@@ -20,6 +20,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Lucida Grande.ttf</string>
+		<string>Lucida Sans Unicode.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
